Updates to bingle_webserver to allow the UX to onboard a user
